<resources>
    <string name="app_name">cnBetaReader</string>
    <string name="action_settings">Settings</string>
    <string name="offline_download">离线下载</string>
    <string name="clean_cache">清除缓存</string>
    <string name="all_information">全部资讯</string>
    <string name="hot_comment">精彩评论</string>
    <string name="month_top10">本月Top10</string>
    <string name="favorites">收藏</string>
    <string name="topic_theme">资讯主题</string>
    <string name="setting">设置</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="collect">收藏选中的资讯</string>
    <string name="collect_succeed">收藏成功</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="cancelled_collection">已取消收藏</string>
    <string name="loading">加载中..."</string>
    <string name="load_more">加载更多</string>
    <string name="click_load_more">点击加载更多</string>


    <string name="information_theme">咨询主题</string>
    <string name="action_refresh">刷新</string>
    <string name="action_qxsc">取消收藏</string>
    <string name="action_font">字体</string>
    <string name="action_browser">浏览器查看</string>
    <string name="action_search">search</string>
    <string name="action_share">share</string>
    <string name="information_detail_key">informationDetail</string>
    <string name="information_list_key">informationList</string>
    <string name="auto_load_off">不加载图片</string>
    <string name="auto_load_on">加载图片（默认）</string>
    <string name="information_detail_title">资讯详情页面</string>
    <string name="information_list_title">资讯列表页面</string>
    <string name="auto_load">自动加载</string>
    <string name="load_on">加载(默认)</string>
    <string name="load_off">不加载</string>
    <string name="load_latest_information_key">loadLatestInformation</string>
    <string name="load_latest_information_title">打开软件加载最新资讯</string>
    <string name="auto_load_more_key">autoLoadMore</string>
    <string name="auto_load_more_title">列表自动加载更多</string>
    <string name="clean_cache_key">cleanCache</string>
    <string name="clean_cache_title">点击此处清除缓存</string>
    <string name="prompt_title">提示</string>
    <string name="text_1_title">在支持或反对某条评论，对资讯发表评论时，由于缓存以及评论需要审核的原因，您的操作可能无法立即看到结果，不过请放心，这并不代表您的操作没有执行</string>

    <string name="about_title">关于</string>
    <string name="text_title">cnBeta.COM是互联网IT新闻业界的后起之秀，是目前国内同行领先的即时新闻站点和网友交流平台</string>
    <string name="theme">主题配色</string>
    <string name="general_category">通用</string>
    <string name="auto_reflush_off">手动刷新列表</string>
    <string name="auto_page_on">自动加载更多</string>
    <string name="auto_reflush_title">首次启动自动刷新</string>
    <string name="auto_page_off">点击加载更多</string>
    <string name="auto_page_key">autoPageLoad</string>
    <string name="auto_page_title">自动加载更多</string>
    <string name="auto_reflush_on">自动刷新列表</string>
    <string name="auto_reflush_key">autoReflush</string>
    <string name="no_wifi_environment_auto_load">非WI-Fi环境下图片自动加载</string>


    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>


</resources>
